# hapi

./: .gitignore  .gitmodules  CLAUDE.md  LICENSE  NOTICE  README.md  docker-compose.yml
pipeline/: .env.example  .gitignore  CLAUDE.md  alembic.ini  pyproject.toml  run_3way_llm.py  run_ab_clean.py  run_benchmark.py  run_benchmark_llm.py  run_match_rate.py  run_match_rich.py
pipeline/alembic/: env.py
pipeline/alembic/versions/: 3a1c350217d9_add_provenance_column_to_artifacts.py  744ef0c92771_initial_schema.py
pipeline/pipeline/: definitions.py
pipeline/pipeline/authority/: claim_graph.py  hapi_extension.rdf  (+1 more)
pipeline/tests/: test_authority.py  test_authority_cidoc_manifest.py  test_authority_claim_graph.py  test_authority_extension_manifest.py  test_authority_merge_singleton_rejection.py  test_beckerath_merge_tie_break.py  test_beckerath_postprocess.py  test_claimgraph_matcher.py  test_kitchen_merge_tie_break.py  test_leprohon_merge_tie_break.py  test_leprohon_transcribe_chunk.py  test_pharaoh_se_parser.py  test_porter_moss_memphis_merge_tie_break.py  test_porter_moss_merge_tie_break.py  test_porter_moss_postprocess.py  test_ryholt_merge_tie_break.py  test_sources_baud_ok_royal_family.py  test_sources_beckerath_1997_chronologie.py  test_sources_dodson_hilton_queens.py  test_sources_hkw_chronology_2006.py  test_sources_holbl_argead.py  test_sources_kitchen_tipe.py  test_sources_leprohon_titulary.py  test_sources_porter_moss_memphis.py  test_sources_porter_moss_theban_necropolis.py  test_sources_ryholt_sip.py  test_sources_shaw_ohae.py  test_structure.py
(+946 files in other folders)
