[project]
name = "hapi-pipeline"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "dagster>=1.12.22",
    "dagster-postgres>=0.28.22",
    "dagster-webserver>=1.12.22",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.5",
    "requests>=2.33.1",
    "sqlalchemy>=2.0.49",
    "typesense>=2.0.0",
]

[tool.dagster]
module_name = "pipeline.definitions"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.1.0",
]
